[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.2",
    "psycopg-pool>=3.3.0",
    "psycopg[binary]>=3.3.3",
    "pwdlib[argon2]>=0.3.0",
    "pydantic>=2.12.5",
    "pyjwt>=2.12.1",
    "sql>=2022.4.0",
    "sqlalchemy>=2.0.48",
    "typing>=3.10.0.0",
    "uvicorn>=0.42.0",
]
